spectate api call toegevoegd.
